<resources>
    <string name="app_name">Movies</string>
    <string name="button_home">Home</string>
    <string name="button_favorites">Favorites</string>
    <string name="button_ratings">Ratings</string>
    <string name="search">Поиск</string>
    <string name="watching_now">Смотрят сейчас</string>
    <string name="recommendations">Лучший рейтинг</string>
    <string name="film_card_size_textView">Жанр фильма</string>
    <string name="film_card_duration_textView">116 мин</string>
    <string name="films_card_budget">Бюджет:</string>
    <string name="film_card_feel">Сборы:</string>
    <string name="film_card_release_date">Дата релиза:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Настройки приложения</string>
    <string name="fragment_settings_adult_switch">Включить взрослый контент</string>
    <string name="notes_film">Тут можно оставить заметку о фильме</string>
    <string name="clear_note">Очистить</string>
    <string name="delete_note_film">Заметка удалена</string>
    <string name="Access_to_geodata">Дотсуп к геоданным</string>
    <string name="explanation_for_permission">Нам нужны приблизительные геоданные для формирования списка фильмов подходящих для вашего региона</string>
    <string name="positive_button_permission">Предоставить доступ</string>
    <string name="neutral_button_permission">Перейти в настройки приложения</string>
    <string name="negative_button_permission">Не предоставлять доступ</string>
    <string name="Country">Страна:</string>
</resources>