


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kotlinmovie.movies.ui.ActivityStartFilmsCard">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintGuide_begin="12dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintGuide_end="12dp"
        android:orientation="vertical"/>
    <FrameLayout
        android:id="@+id/fragment_container_films_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <TextView
        android:id="@+id/film_card_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/film_card_name_textView_size"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/film_card_favorites_imageButton"
        app:layout_constraintHorizontal_bias="0.001"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=" фильмаНазвание фильмаНазвание фильма" />

    <ImageView
        android:id="@+id/film_card_banner_imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/joker"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/film_card_name_textView" />


    <TextView
        android:id="@+id/film_card_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars = "vertical"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/film_card_banner_imageView"
        tools:text="@tools:sample/lorem/random" />

    <ImageButton
        android:id="@+id/film_card_favorites_imageButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0.5"
        android:backgroundTint="#F3EFEF"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/film_card_genre_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/film_card_size_textView"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_name_textView" />

    <TextView
        android:id="@+id/film_card_duration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="116 мин"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_genre_textView" />

    <TextView
        android:id="@+id/film_card_budget_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/films_card_budget"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_duration_textView" />

    <TextView
        android:id="@+id/film_card_fees_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/film_card_feel"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_budget_textView" />

    <TextView
        android:id="@+id/film_card_rating_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        tools:text="9.9"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_fees_textView"/>


    <TextView
        android:id="@+id/film_card_vote_count_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        tools:text="11 122"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/film_card_rating_textView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_fees_textView"/>


    <TextView
        android:id="@+id/film_card_release_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/film_card_release_date"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_rating_textView" />

    <ImageButton
        android:id="@+id/film_card_rating_imageButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toEndOf="@+id/film_card_vote_count_textView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_fees_textView"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/film_card_budget_dollar_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="900000000$"
        app:layout_constraintBaseline_toBaselineOf="@+id/film_card_budget_textView"
        app:layout_constraintStart_toEndOf="@+id/film_card_budget_textView" />

    <TextView
        android:id="@+id/film_card_fees_dollar_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="3000000000$"
        app:layout_constraintStart_toEndOf="@+id/film_card_fees_textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/film_card_fees_textView" />

    <TextView
        android:id="@+id/film_card_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="@tools:sample/date/ddmmyy"
        app:layout_constraintStart_toEndOf="@+id/film_card_release_date_textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/film_card_release_date_textView" />

    <ImageButton
        android:id="@+id/back_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/film_card_country_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/film_card_release_date"
        app:layout_constraintStart_toEndOf="@+id/film_card_banner_imageView"
        app:layout_constraintTop_toBottomOf="@+id/film_card_release_date_textView" />
    <TextView
        android:id="@+id/film_card_country_paste_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="Россия"
        app:layout_constraintStart_toEndOf="@+id/film_card_release_date_textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/film_card_country_textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_linearLayout"
        android:layout_width="222dp"
        android:layout_height="215dp"
        android:layout_marginStart="124dp"
        android:background="#E3E0C5"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/film_card_description_textView"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/note_start_imageButton">



        <EditText
            android:id="@+id/text_note_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/films_name"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/notes_film" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/clear_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/note_start_imageButton"
        android:layout_width="34dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/film_card_favorites_imageButton"
        app:srcCompat="@android:drawable/stat_notify_chat" />


</androidx.constraintlayout.widget.ConstraintLayout>